# alz-mri-neural-network

./: .gitignore  Alz_CNN.postman_collection.json  LICENSE  README.md  create_kaggle_json.sh  front_end.py  histories.txt  init.sh  installer.cfg  load_image_data.py  model_training.py  pre_push.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  start_front_end.sh  tests.py  tox.ini
.github/workflows/: python-app.yml  requirements.txt  tests.yml  ubuntu_tests.yml  windows_tests.yml
logs/: failures.txt  histories.txt
src/alz_mri_cnn/: deprecated_generator_code.py  front_end.py  image_dataset.py  load_image_data.py  model_training.py  utils.py
src/alz_mri_cnn/static/: optimal_weights_98%.keras
src/alz_mri_cnn/templates/: index.html
templates/: index.html
tests/: tests.py
