[metadata]
name = alz_mri_cnn
description = 
author = Jonathan Trull
license = MIT 
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    alz_mri_cnn
install_requires=
    tensorflow>=2.14.0
    keras>=2.11.0
    flask>=2.2.5
    werkzeug>=2.2.3
    tqdm>=4.66.1
    numpy>=1.23.5
    matplotlib>=3.5.3
    pillow>=9.4.0
    opencv-python>=4.8.0
python_requires = >=3.6
package_dir=
    =src
zip_safe=no

[options.extras_require]
testing=
    pytest>=7.4.2
    pytest-cov>=4.0
    flake8>=5.0
    tox>=3.24
    mypy>=1.0
    opencv-python>=4.8.0


[options.package_data]
alz_mri_cnn = py.typed

[flake8]
max-line-length = 240