[metadata]
name = alz_mri_cnn
description = Simple Convolutional Neural Network intended to diagnose fictitious MRI images, labeling new inputs as one of the following classes: 
    No Impairment, Very Mild Impairment, Very Mild Impairment, and Moderate Impairment
author = Jonathan Trull
license = MIT 
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    alz_mri_cnn
install_requires=
    tensorflow>=1.15.0
    keras>=2.11.0
    flask>=2.2.5
    werkzeug>=2.2.3
    tqdm>=4.66.1
    numpy>=1.21.6
    matplotlib>=3.5.3
    pillow>=9.4.0
    opencv-python>=4.8.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    # kaggle>=1.5.0
    seaborn>=0.12.0
    matplotlib>=3.5.0
    gdown>=4.7.1
    pyunpack>=0.3


python_requires = >=3.6
package_dir=
    =src
zip_safe=no

[options.extras_require]
testing=
    pytest>=7.4.2
    pytest-cov>=4.0
    flake8>=5.0
    tox>=3.24
    mypy>=1.0
    pytest-ordering>=0.6
    autopep8>=1.6.0
    isort>=5.9.0

[options.package_data]
alz_mri_cnn = py.typed

[flake8]
max-line-length = 240